@@ -1,0 +1,22 @@
+<?xml version="1.0"?>
+<form string="Terminate Contract">
+    <field name="effective_date" invisible="1"/>
+    <field name="endorsement_part" invisible="1"/>
+    <field name="endorsement_definition" invisible="1"/>
+    <newline/>
+    <group id="current_data" colspan="4">
+    <label name="contract"/>
+    <field name="contract"/>
+    </group>
+    <group id="current_data" colspan="2">
+        <label name="current_end_date"/>
+        <field name="current_end_date"/>
+    </group>
+    <group id="new_data" colspan="2">
+        <label name="termination_date"/>
+        <field name="termination_date"/>
+        <newline/>
+        <label name="termination_reason"/>
+        <field name="termination_reason" widget="selection"/>
+    </group>
+</form>
