@@ -6,3 +6,4 @@ depends:
     premium
 xml:
     wizard.xml
+    offered.xml
