@@ -1,3 +1,4 @@
+* Add terminate_contract endorsement
 * Add extra_data endorsement
 * Add endorsement number
 * Allow to trigger calculate after application
